# ChangeLog for gnome-base/libbonoboui
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.40 2003/11/15 02:47:28 agriffis Exp $

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> libbonoboui-2.4.0.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> libbonoboui-2.4.0.ebuild:
  set stable on sparc

*libbonoboui-2.4.1 (30 Oct 2003)

  30 Oct 2003; foser <foser@gentoo.org> libbonoboui-2.4.1.ebuild :
  New release

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org>
  libbonoboui-2.4.0.ebuild:
  set ppc in keywords

  16 Oct 2003; Aron Griffis <agriffis@gentoo.org> libbonoboui-2.4.0.ebuild:
  Stable on alpha

  05 Oct 2003; Mike Gardiner <obz@gentoo.org> libbonoboui-2.4.0.ebuild:
  Marked stable on x86

  23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org>
  libbonoboui-2.2.4.ebuild:
  set ppc in keywords

*libbonoboui-2.4.0 (07 Sep 2003)

  07 Sep 2003; foser <foser@gentoo.org> libbonobui-2.4.0.ebuild :
  Gnome 2.4 rc1

  25 Aug 2003; Mike Gardiner <obz@gentoo.org> libbonoboui-2.2.4.ebuild:
  Moved to stable on x86

*libbonoboui-2.2.4 (05 Jul 2003)

  05 Jul 2003; foser <foser@gentoo.org> libbonoboui-2.2.4.ebuild :
  New version, should fix problems reported with 2.2.3 (#25776)

*libbonoboui-2.2.3 (30 Jul 2003)

  04 Aug 2003; foser <foser@gentoo.org> libbonoboui-2.2.3.ebuild :
  Remove ebuild, it is buggy (#25776)

  30 Jul 2003; foser <foser@gentoo.org> libbonoboui-2.2.3.ebuild :
  New version

*libonoboui-2.2.2 (19 May 2003)

  04 Aug 2003; Guy Martin <gmsoft@gentoo.org> libonoboui-2.2.2.ebuild :
  Marked stable on hppa.

  01 Jul 2003; Guy Martin <gmsoft@gentoo.org> libonoboui-2.2.2.ebuild :
  Added ~hppa to KEYWORDS.

  30 May 2003; Luca Barbato <lu_zero@gentoo.org> libbonoboui-2.2.0.1.ebuild:
  Marked stable for ppc.

*libbonoboui-2.2.0.1 (04 Mar 2003)

  01 Jul 2003; Guy Martin <gmsoft@gentoo.org> libbonoboui-2.2.0.1.ebuild :