@@ -1,12 +1,12 @@
-MD5 6eef5d1427379df80ad1cd3869338998 ChangeLog 4653
+MD5 6cc39881a3ed622c71125f7bfecab6cc ChangeLog 4749
 MD5 079c3a4a6074af57f06705931c9df146 libbonoboui-2.2.0.1.ebuild 788
-MD5 71b2eaf6e14d30c459be446ae7bdea0a libbonoboui-2.2.4.ebuild 822
 MD5 bc0991271cf39c5830e17f985bc31b2d libbonoboui-2.2.2.ebuild 835
-MD5 62e207548332896c298bee1ab7e77b35 libbonoboui-2.4.0.ebuild 782
-MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
+MD5 71b2eaf6e14d30c459be446ae7bdea0a libbonoboui-2.2.4.ebuild 822
+MD5 9e333bb62c766bc7f04973b3d01d5061 libbonoboui-2.4.0.ebuild 779
 MD5 df171789c825529a5c9a6027cbfe0948 libbonoboui-2.4.1.ebuild 776
+MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 c4b021c763e62972ddc097c5d16724a0 files/digest-libbonoboui-2.2.0.1 72
-MD5 0c072d40de0fecc501add3f4557fe6a6 files/digest-libbonoboui-2.2.4 70
 MD5 f8cd4590c7540d8ce5edcdc851e771bb files/digest-libbonoboui-2.2.2 70
+MD5 0c072d40de0fecc501add3f4557fe6a6 files/digest-libbonoboui-2.2.4 70
 MD5 7dd4d8064f9c7aa453ede86b8fb2cd1c files/digest-libbonoboui-2.4.0 70
 MD5 03b95d5de9063c1eab78e384f0a88422 files/digest-libbonoboui-2.4.1 70
