@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/libbonoboui-2.4.0.ebuild,v 1.7 2003/11/15 02:47:28 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/libbonoboui-2.4.0.ebuild,v 1.8 2003/12/12 23:40:27 gmsoft Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/"
 
 IUSE="doc"
 SLOT="0"
-KEYWORDS="x86 ppc alpha sparc ~hppa amd64 ia64"
+KEYWORDS="x86 ppc alpha sparc hppa amd64 ia64"
 LICENSE="GPL-2 LGPL-2.1"
 
 RDEPEND=">=x11-libs/gtk+-2.2
