@@ -1,6 +1,6 @@
 # ChangeLog for gnome-base/libgnome
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnome/ChangeLog,v 1.41 2003/11/15 02:47:02 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnome/ChangeLog,v 1.42 2003/12/12 23:37:47 gmsoft Exp $
 
   14 Nov 2003; Aron Griffis <agriffis@gentoo.org> libgnome-2.4.0.ebuild:
   Stable on ia64
@@ -35,6 +35,9 @@
   Dependency added to ORBit2
 
 *libgnome-2.4.0 (07 Sep 2003)
+
+  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> libgnome-2.4.0.ebuild :
+  Marked stable on hppa.
 
   07 Sep 2003; foser <foser@gentoo.org> libgnome-2.4.0.ebuild :
   Gnome 2.4 rc1 
