@@ -1,6 +1,6 @@
 # ChangeLog for gnome-base/libgnomeui
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/ChangeLog,v 1.39 2003/11/15 02:47:56 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomeui/ChangeLog,v 1.40 2003/12/12 23:42:59 gmsoft Exp $
 
   14 Nov 2003; Aron Griffis <agriffis@gentoo.org> libgnomeui-2.4.0.1.ebuild:
   Stable on ia64
@@ -22,6 +22,9 @@
   set ppc in keywords
 
 *libgnome-2.4.0.1 (11 Sep 2003)
+
+  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> libgnomeui-2.4.0.1.ebuild :
+  Marked stable on hppa.
 
   11 Sep 2003; foser <foser@gentoo.org> libgnomeui-2.4.0.1.ebuild :
   New version 
