@@ -1,6 +1,6 @@
 # ChangeLog for gnome-base/libbonoboui
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.40 2003/11/15 02:47:28 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.41 2003/12/12 23:40:27 gmsoft Exp $
 
   14 Nov 2003; Aron Griffis <agriffis@gentoo.org> libbonoboui-2.4.0.ebuild:
   Stable on ia64
@@ -28,6 +28,9 @@
   set ppc in keywords
 
 *libbonoboui-2.4.0 (07 Sep 2003)
+
+  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> libbonobui-2.4.0.ebuild :
+  Marked stable on hppa.
 
   07 Sep 2003; foser <foser@gentoo.org> libbonobui-2.4.0.ebuild :
   Gnome 2.4 rc1
